[project]
name = "cache-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "requests>=2.32.4",
    "uvicorn[all]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "debugpy>=1.8.15",
    "ruff>=0.12.5",
]
